--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
   src: url(../resources/fonts/ShareTechMono-Regular.ttf) format('truetype');
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 header {
   position: relative;
   display: flex;
