--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,15 @@
   src: url(../resources/fonts/ShareTechMono-Regular.ttf) format('truetype');
 }
 
-* {
+html, body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  min-height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -184,6 +189,7 @@ main {
   justify-content: center;
   align-items: center;
   text-align: center;
+  flex: 1;
 }
 
 main::before {
