--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,15 @@
   src: url(../resources/fonts/ShareTechMono-Regular.ttf) format('truetype');
 }
 
-html, body {
+*{
   margin: 0;
   padding: 0;
-  min-height: 100vh;
 }
 
 body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
