--- a/css/style.css
+++ b/css/style.css
@@ -487,6 +487,7 @@ main > * {
   color: #c0ffc0;
   box-shadow: 0 0 20px rgba(2, 255, 2, 0.2);
   position: relative;
+    transform:translateX(-2vw);
 }
 
 .overlay h2 {
@@ -963,6 +964,20 @@ footer p {
     grid-template-columns: 1fr;
   }
 
+  .overlay-content {
+    max-width: 60vw;
+    padding: 1.2rem;
+    transform: translateX(-5vw);
+    justify-self: center;
+  }
+  .overlay h2 {
+    font-size: 1.5rem;
+  }
+
+  .overlay h3 {
+    font-size: 1.2rem;
+  }
+
   footer {
     padding: 2rem 4vw 1.5rem;
   }
@@ -1004,18 +1019,6 @@ footer p {
   .project-btn {
     font-size: 0.95rem;
     padding: 0.75rem 1rem;
-  }
-
-  .overlay-content {
-    padding: 1.2rem;
-  }
-
-  .overlay h2 {
-    font-size: 1.5rem;
-  }
-
-  .overlay h3 {
-    font-size: 1.2rem;
   }
 
   .contact-links {
