--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ main > * {
   font-family: 'Share Tech Mono', monospace;
   font-size: clamp(2rem, 5vw, 3rem);
   color: #2aff2a;
+  text-shadow: 0px 0px 2px white;
   margin-bottom: 1rem;
 }
 
@@ -782,7 +783,7 @@ mark {
 }
 
 .search-card h1 {
-  font-family: 'Share Tech Mono', monospace;
+  font-family: 'Share Tech Mono', mono;
   font-size: clamp(2rem, 4vw, 2.8rem);
   color: #2aff2a;
   margin-bottom: 1rem;
